Change name of kijana-jeuri to index.html.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+ <link href="css/styles.css"
+ rel="stylesheet" type="text/css">
   <title>Kijana Jeuri</title>
 </head>
 
@@ -17,10 +19,9 @@
   <center>
 <img src="img/Bekground.png" alt="An abstract image">
   </center>
-  <center>
-    <p><b><i>CHAPTER 1</i></b></p>
-    <p><b><u><h1 title="The First Chapter">ROSE &nbsp; GOLD &nbsp; CHAMPAGNE</h1></u></b></p>
-  </center>
+
+    <h1>CHAPTER 1</h1>
+    <h1 title="The First Chapter">ROSE &nbsp; GOLD &nbsp; CHAMPAGNE</h1>
 
   <p>She looked at him from across the room. A mischevious smile crossed her lips when he noticed but she quickly looked down at her glass while her finger toyed with her hair.</p>
 
